Separate out a tiny bit of styling

--- a/index.html
+++ b/index.html
@@ -1,18 +1,37 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html><head>
-  <font><b><title>E. Mehmet K&#305;ral's Homepage</title>  
+  <font><b><title>E. Mehmet K&#305;ral's Homepage</title>
   <meta name="description" content="Personal Webpage of Eren Mehmet Kiral">
   <meta name="keywords" content="automorphic forms, brown university, math, math 18, brown, mehmet kiral">
   <meta name="author" content="Eren Mehmet Kiral">
   <meta name="revised" content="Eren Mehmet Kiral, 27/July/2013">
-</b></font></head><body style="background-color: rgb(252, 255, 254);" marginwidth="25">
-<font><b> <font><b> <font><b> <font><b> <font><b> <font><b> <font><b>
-<font><b> <font><b> </b></font></b></font></b></font></b></font></b></font></b></font></b></font></b></font></b></font>
-<div style="margin: 0px auto; width: 95%;">
+</b></font>
+
+<style type="text/css">
+html {
+    background-color: rgb(253, 255, 254);
+}
+body {
+    margin:40px auto;
+    max-width:900px;
+    line-height:1.6;
+    font-size:18px;
+    padding:0 10px
+}
+h1,h2,h3 {
+    line-height:1.2
+}
+</style>
+</head>
+
+<body>
+<div id="content">
+
 <p> <font size="5"><b>
 <center>E. Mehmet K&#305;ral's Page</center>
 </b></font> </p>
-<table style="width:50%">
+
+<table>
   <tbody>
     <td width="50%">
       <h3>Teaching</h3>
@@ -32,9 +51,11 @@
 <h3>Research</h3>
 I got my Ph.D. from Brown University my adviser was Jeffrey Hoffstein. <br>
 My research up to now has been on automorphic forms and metaplectic
-forms. &nbsp;&nbsp;&nbsp;&nbsp;
+forms. <br>
 My <a href ="CV_Feb_2017_ErenMehmetKiral.pdf"> CV</a>.
+
 <h3>List of Publications</h3>
+
 <table>
   <tbody>
     <tr valign = "top">
@@ -44,7 +65,7 @@ My <a href ="CV_Feb_2017_ErenMehmetKiral.pdf"> CV</a>.
     </tr>
     <tr valign="top">
     <td>2. </td>
-      <td> <i>The Voronoi formula and double Dirichlet series</i><br> joint with F. Zhou <br> 
+      <td> <i>The Voronoi formula and double Dirichlet series</i><br> joint with F. Zhou <br>
 Algebra &amp; Number Theory vol. 10, No 10 (2016), pp. 2267-2286.
  <br> <a href="uncut.pdf"> long version </a> </td>
       <td><a href="http://arxiv.org/abs/1508.01985">arxiv </a> </td>
@@ -52,8 +73,8 @@ Algebra &amp; Number Theory vol. 10, No 10 (2016), pp. 2267-2286.
     <tr valign="top">
       <td>3. </td>
       <td><i>Opposite sign Kloosterman sum zeta function</i><br>
-Mathematika, vol 62, Issue 02, (2016), pp. 406 - 429 
-      </td> 
+Mathematika, vol 62, Issue 02, (2016), pp. 406 - 429
+      </td>
       <td><a href="http://arxiv.org/abs/1504.01860">arxiv </a> </td>
     </tr>
     <tr valign="top">
@@ -65,14 +86,14 @@ Acta Arithmetica, vol. 165, no. 4 (2014): pp. 385-399<br>
     </tr>
     <tr valign="top">
       <td>5.</td>
-      <td><i>Subconvexity for Half Integral Weight L-functions.</i> <br> 
+      <td><i>Subconvexity for Half Integral Weight L-functions.</i> <br>
 Mathematische Zeitschrift, vol. 281, Issue 3 (2015): pp. 689-722</td>
       <td><a href="http://arxiv.org/abs/1307.0112">arxiv </a></td>
     </tr>
     <tr valign="top">
       <td>6.</td>
       <td><i>Counting Square Discriminants </i> <br>
-joint with T. A. Hulse, C. I. Kuan, L. Lim, <br> 
+joint with T. A. Hulse, C. I. Kuan, L. Lim, <br>
          Journal of Number Theory, vol. 162, (2016): 255-274.</td>
       <td><a href="http://arxiv.org/abs/1307.6606">arxiv</a> </td>
     </tr>
@@ -88,9 +109,10 @@ International Journal of Number Theory, vol. 8, no. 3 (2012): pp.
   </tbody>
 </table>
 <br>
-<div style="text-align: right;"><small>Last updated: Oct 27, 2016<br>
-</small></div>
+<div style="text-align: right;">
+<small>Last updated: Oct 27, 2016<br></small>
 </div>
+</div> <!-- End content -->
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
