--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@ h1,h2,h3 {
        Communications and Cryptography<br>
       </p>
       <h3>Personal</h3>
-      A place I care deeply <a href="http://matematikkoyu.org/eng/" target="_blank">about.</a>
-      <h3><a href="http://www.math.tamu.edu/~ekiral/seminar/index.html" target="_blank">Number Theory Seminar Webpage</a></h3>
+      A place I care deeply <a href="http://matematikkoyu.org/eng/" target="_blank">about.</a> <br/>
+      email: lowercasefullnamenospaces@protonmail.com
     </td>
     <td>
        <img src="mehmetMoma.jpg" alt="Headshot of myself in MoMa" title="I got this picture in MoMa right next to an abstract painting. White square on white background." height="200" width="200">
@@ -52,7 +52,7 @@ h1,h2,h3 {
 I got my Ph.D. from Brown University my adviser was Jeffrey Hoffstein. <br>
 My research up to now has been on automorphic forms and metaplectic
 forms. <br>
-My <a href ="CV_Feb_2017_ErenMehmetKiral.pdf"> CV</a>.
+My <a href ="CV_May_2017_ErenMehmetKiral.pdf"> CV</a>.
 
 <h3>List of Publications</h3>
 
