Haiku and Research
Added Haiku on Petersson Trace formula and changed the paragraph on my research interests.

--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@ body {
 h1,h2,h3 {
     line-height:1.2
 }
+.poetry{
+	font-size:12px;
+	font-style:italic;
+}
 </style>
 </head>
 
@@ -42,17 +46,32 @@ h1,h2,h3 {
       A place I care deeply <a href="http://matematikkoyu.org/eng/" target="_blank">about.</a> <br/>
       email: lowercasefullnamenospaces@protonmail.com
     </td>
-    <td>
+    <td width="50%">
        <img src="mehmetMoma.jpg" alt="Headshot of myself in MoMa" title="I got this picture in MoMa right next to an abstract painting. White square on white background." height="200" width="200">
-    </td>
+	</td>
   </tbody>
 </table>
 
-<h3>Research</h3>
-I got my Ph.D. from Brown University my adviser was Jeffrey Hoffstein. <br>
-My research up to now has been on automorphic forms and metaplectic
-forms. <br>
-My <a href ="CV_Nov_2017_ErenMehmetKiral.pdf"> CV</a>.
+<table>
+	<tbody>
+		<td width="60%">
+			<h3>Research</h3>
+			I work on modular/automorphic forms
+			including half-integer weight forms, and their L-functions, 
+			and the moments of said L-functions.
+			 <br>
+			My <a href ="CV_Nov_2017_ErenMehmetKiral.pdf"> CV</a>.
+			<br/>
+			My Ph.D. advisor is Jeffrey Hofstein from Brown University, and my postdoctoral mentor is 
+			Matthew Young from Texas A&amp;M University.
+		</td>
+		<td class = poetry>
+			<h3> A Haiku </h3>
+			With Petersson Trace, <br/>
+			You get more when you give less <br/>
+			Fewer c's, more forms
+		<td>
+</table>
 
 <h3>List of Publications</h3>
 
@@ -110,7 +129,7 @@ International Journal of Number Theory, vol. 8, no. 3 (2012): pp.
 </table>
 <br>
 <div style="text-align: right;">
-<small>Last updated: Oct 27, 2016<br></small>
+<small>Last updated: 12 December 2017<br></small>
 </div>
 </div> <!-- End content -->
 
