New Publication and Updated CV
I updated the CV and the list of publications to include the recent paper with Nickolas Andersen. Also updated the topic of discussion and the list of participants in the Summer workshop at the Math village

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ h1,h2,h3 {
       </p>
       <h3>Personal</h3>
       A place I care deeply <a href="http://matematikkoyu.org/eng/" target="_blank">about.</a> <br/>
-      email: lowercasefullnamenospaces@protonmail.com
+      email: erenmehmetkiral@protonmail.com
     </td>
     <td width="50%">
        <img src="mehmetMoma.jpg" alt="Headshot of myself in MoMa" title="I got this picture in MoMa right next to an abstract painting. White square on white background." height="200" width="200">
@@ -60,7 +60,7 @@ h1,h2,h3 {
 			including half-integer weight forms, and their L-functions, 
 			and the moments of said L-functions.
 			 <br>
-			My <a href ="CV_Nov_2017_ErenMehmetKiral.pdf"> CV</a>.
+			My <a href ="CV_Jan_2018_ErenMehmetKiral.pdf"> CV</a>.
 			<br/>
 			My Ph.D. advisor is Jeffrey Hofstein from Brown University, and my postdoctoral mentor is 
 			Matthew Young from Texas A&amp;M University.
@@ -77,47 +77,62 @@ h1,h2,h3 {
 
 <table>
   <tbody>
+	<tr valign = "top">
+      <td>1.</td>
+      <td> <i>Level Reciprocity in the twisted second moments of Rankin-Selberg L-functions</i> <br> joint with N. Andersen </td>
+      <td><a href="https://arxiv.org/abs/1801.06089"> arxiv </a> </td>
+    </tr>
     <tr valign = "top">
-      <td>1. </td>
+      <td>2. </td>
       <td> <i>The fifth moment of Modular L-functions</i> <br> joint with M. Young </td>
       <td><a href="https://arxiv.org/abs/1701.07507"> arxiv </a> </td>
     </tr>
-    <tr valign="top">
-    <td>2. </td>
+    <tr valign = "top">
+      <td>3. </td>
+      <td> <i>Oscillatory integrals with uniformity in parameters</i> <br> joint with I. Petrow, M. Young </td>
+      <td><a href="https://arxiv.org/abs/1710.00916"> arxiv </a> </td>
+    </tr>    
+	<tr valign = "top">
+      <td>4. </td>
+      <td> <i>Kloosterman sums and Fourier coefficients of Eisenstein series</i> <br> joint with M. Young </td>
+      <td><a href="https://arxiv.org/abs/1710.00914"> arxiv </a> </td>
+    </tr>    
+	<tr valign="top">
+      <td>5. </td>
       <td> <i>The Voronoi formula and double Dirichlet series</i><br> joint with F. Zhou <br>
 Algebra &amp; Number Theory vol. 10, No 10 (2016), pp. 2267-2286.
  <br> <a href="uncut.pdf"> long version </a> </td>
       <td><a href="http://arxiv.org/abs/1508.01985">arxiv </a> </td>
     </tr>
     <tr valign="top">
-      <td>3. </td>
+      <td>6. </td>
       <td><i>Opposite sign Kloosterman sum zeta function</i><br>
 Mathematika, vol 62, Issue 02, (2016), pp. 406 - 429
       </td>
       <td><a href="http://arxiv.org/abs/1504.01860">arxiv </a> </td>
     </tr>
     <tr valign="top">
-      <td>4. </td>
+      <td>7. </td>
       <td><i>Bounds on Sup-norms of Half Integral Weight Modular Forms</i><br>
 Acta Arithmetica, vol. 165, no. 4 (2014): pp. 385-399<br>
       </td>
       <td><a href="http://arxiv.org/abs/1309.7218">arxiv</a> </td>
     </tr>
     <tr valign="top">
-      <td>5.</td>
+      <td>8.</td>
       <td><i>Subconvexity for Half Integral Weight L-functions.</i> <br>
 Mathematische Zeitschrift, vol. 281, Issue 3 (2015): pp. 689-722</td>
       <td><a href="http://arxiv.org/abs/1307.0112">arxiv </a></td>
     </tr>
     <tr valign="top">
-      <td>6.</td>
+      <td>9.</td>
       <td><i>Counting Square Discriminants </i> <br>
 joint with T. A. Hulse, C. I. Kuan, L. Lim, <br>
          Journal of Number Theory, vol. 162, (2016): 255-274.</td>
       <td><a href="http://arxiv.org/abs/1307.6606">arxiv</a> </td>
     </tr>
     <tr valign="top">
-      <td>7.</td>
+      <td>10.</td>
       <td><i>The Sign of Fourier Coefficients of Half-Integral Cusp
 Forms </i> <br>
 joint with T. A. Hulse, C. I. Kuan, L. Lim, <br>
@@ -129,7 +144,7 @@ International Journal of Number Theory, vol. 8, no. 3 (2012): pp.
 </table>
 <br>
 <div style="text-align: right;">
-<small>Last updated: 12 December 2017<br></small>
+<small>Last updated: 19 January 2018<br></small>
 </div>
 </div> <!-- End content -->
 
