--- a/JEFFersonUpperHalfPlane.html
+++ b/JEFFersonUpperHalfPlane.html
@@ -32,20 +32,25 @@ h1,h2,h3 {
 <div id="content">
 
 <p> <font size="5"><b>
-<center>Workshop on Oldforms</center>
+<center>Workshop on Moments of L-functions</center>
 </b></font> </p>
 
 <table>
   <tbody>
     <td width="50%">
       <h3>Why?</h3>
-      <p>I hate to break it to you, but we aren't getting any younger. Neither are
+      <p><!--I hate to break it to you, but we aren't getting any younger. Neither are
 	  modular forms. However there may be brand new (like 60-70 years old) way to 
 	  express these oldforms: Adelicization. How do Atkin-Lehner-Li operators
 	  look like if you look from the prism (kaleidescope?) of adelicization?
 	  This all may be well known in the literature. But if I don't know it, 
-	  it's news to me! So let's figure this out. 
+	  it's news to me! So let's figure this out. -->
+	  Why Not.
       </p>
+	  <h3> What? </h3>
+	  <p> We will use this opportunity to survey the tools used in the major results 
+	  concerning bounds for high moments of families of L-functions.  
+	  </p>
       <h3>Where?</h3>
       <p> The beautiful premises of <a href="https://www.nesinkoyleri.org/eng/">
 	  Nesin Mathematics Village</a> is going to provide the idlylic location for 
@@ -84,21 +89,25 @@ h1,h2,h3 {
 <h3> Who? </h3>	
 <table>
   <tbody>
-    <tr> <th>Organing Committee <hr/>  </th> <th>Scientific Advisory Board <hr/>  </th><th>List of Participants <hr/>  </th></tr>
+    <tr> <th>Organizing Committee <hr/>  </th> <th>Scientific Advisory Board <hr/>  </th><th>List of Participants <hr/>  </th></tr>
 	<tr> <td> Thomas Hulse </td><td> Thomas Hulse </td><td> Thomas Hulse </td> </tr>
 	<tr> <td> Eren Mehmet K&#305;ral </td><td> Jeffrey Hoffstein </td><td> Jeffrey Hoffstein </td> </tr>
-	<tr> <td> Whoever else wants</td> <td> Eren Mehmet K&#305;ral </td><td> Eren Mehmet K&#305;ral </td></tr>
+	<tr> <td> Chan Ieong Kuan</td> <td> Eren Mehmet K&#305;ral </td><td> Eren Mehmet K&#305;ral </td></tr>
 	<tr> <td></td> <td> Chan Ieong Kuan </td><td> Chan Ieong Kuan </td></tr>
-	<tr> <td></td> <td> Min Lee </td><td> Min Lee* </td> </tr>
+	<tr> <td></td> <td> Min Lee </td><td> Min Lee </td> </tr>
 	<tr> <td></td> <td> Li-Mei Lim </td><td> Li-Mei Lim* </td> </tr>
 	<tr> <td></td> <td> David Lowry-Duda </td> <td> David Lowry-Duda </td></tr> 
 	<tr> <td></td> <td> Alex Walker </td> <td> Alex Walker </td> </tr>
+	<tr> <td></td> <td> </td> <td> Didier Lesesvre* </td> </tr>
+	<tr> <td></td> <td> </td> <td> Naomi Tanabe* </td> </tr>
+	<tr> <td></td> <td> </td> <td> Alia Hamieh* </td> </tr>
+    <tr> <td></td> <td> </td> <td> Kevser Aktas* </td> </tr>
 	<tr> <td>* = Not yet confirmed </td> <td> </td> <td> </td> </tr>
   </tbody>
 </table>
 <br>
 <div style="text-align: right;">
-<small>Last updated: 8 January 2018<br></small>
+<small>Last updated: 19 January 2018<br></small>
 </div>
 </div> <!-- End content -->
 
