--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ h1,h2,h3 {
 			including half-integer weight forms, and their L-functions, 
 			and the moments of said L-functions.
 			 <br>
-			My <a href ="CV_Jan_2018_ErenMehmetKiral.pdf"> CV</a>.
+			My <a href ="CV_Apr_2018_ErenMehmetKiral.pdf"> CV</a>.
 			<br/>
 			My Ph.D. advisor is Jeffrey Hofstein from Brown University, and my postdoctoral mentor is 
 			Matthew Young from Texas A&amp;M University.
@@ -79,7 +79,8 @@ h1,h2,h3 {
   <tbody>
 	<tr valign = "top">
       <td>1.</td>
-      <td> <i>Level Reciprocity in the twisted second moments of Rankin-Selberg L-functions</i> <br> joint with N. Andersen </td>
+      <td> <i>Level Reciprocity in the twisted second moments of Rankin-Selberg L-functions</i> 
+	  <br> joint with N. Andersen <br> Accepted for publication in Mathematika</td>
       <td><a href="https://arxiv.org/abs/1801.06089"> arxiv </a> </td>
     </tr>
     <tr valign = "top">
@@ -94,7 +95,8 @@ h1,h2,h3 {
     </tr>    
 	<tr valign = "top">
       <td>4. </td>
-      <td> <i>Kloosterman sums and Fourier coefficients of Eisenstein series</i> <br> joint with M. Young </td>
+      <td> <i>Kloosterman sums and Fourier coefficients of Eisenstein series</i> 
+	  <br> joint with M. Young <br> Accepted for publication in The Ramanujan Journal</td>
       <td><a href="https://arxiv.org/abs/1710.00914"> arxiv </a> </td>
     </tr>    
 	<tr valign="top">
