--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@ h1,h2,h3 {
   <tbody>
     <td width="50%">
       <h3>Teaching</h3>
-      <p>I taught  <a href="./cryptography/2016fall.html" target="_blank">Math 470</a> in 2016 Fall,
-       Communications and Cryptography<br>
+      <p>I am giving a lecture series on Public Key Cryptography at RIKEN, Wako Campus as a part of iTHEMS. My Jupyter notebook 
+	  <a href="http://nbviewer.jupyter.org/github/ekiral/cryptography/tree/master/"> lecture notes</a> <br>
       </p>
       <h3>Personal</h3>
       A place I care deeply <a href="http://matematikkoyu.org/eng/" target="_blank">about.</a> <br/>
@@ -146,7 +146,7 @@ International Journal of Number Theory, vol. 8, no. 3 (2012): pp.
 </table>
 <br>
 <div style="text-align: right;">
-<small>Last updated: 19 January 2018<br></small>
+<small>Last updated: 27 April 2018<br></small>
 </div>
 </div> <!-- End content -->
 
