Workshop Link and some typos

--- a/nesinworkshop.html
+++ b/nesinworkshop.html
@@ -31,11 +31,16 @@ h1,h2,h3 {
 <center>Workshop on Automorphic Forms, L-functions, and Moments</font> <br><font size="4"> 
 July 30 - August 5 <br> Nesin Mathematics Village, Sel&ccedil;uk, &#304;zmir, Turkey
 
-</b></font> </p><p> This is a one week workshop, focusing on the moment results for families 
-of L-functions.  For the first half of the week there will be talks surveying the recent 
-results in the area, specifically major results concerning bounds for high moments of families 
-of L-functions, and the participants will have ample time for collaborative work. The participants 
-are encouraged to collaborate in the wider area of automorphic forms and L-functions beyond the specified scope of this workshop. </p>
+</b></font> </p><p> This is a one week workshop on automorphic forms. The participants 
+are expected to collaborate in the wider area of automorphic forms and L-functions. 
+
+On the first day we have scheduled pitches for topics to work on in the general area of
+automorphic forms and analytic number theory. For the rest of the week, the participants 
+will join groups and work on various projects.
+
+On Saturday there will be progress reports from the groups and they will lay out a plan for 
+completing the project.
+</p>
 </center>
  
 
@@ -53,12 +58,10 @@ are encouraged to collaborate in the wider area of automorphic forms and L-funct
 	<p> <a href="https://ekiral.github.io/"> Dr. E. Mehmet K&#305;ral</a></p>
 	<p> <a href="http://math.umaine.edu/~cikuan/"> Dr. Chan Ieong Kuan </a> </p>
 	<p> <a href="http://www.morgan.edu/tahulse"> Dr.Thomas A. Hulse</a> </p>
-	<p> <a href="https://minleemath.wordpress.com/"> Dr. Min Lee </a> </p>
 	<p> <a href="http://hope.simons-rock.edu/~llim/"> Dr. Li-Mei Lim </a> </p>
 	<p> <a href="https://warwick.ac.uk/fac/sci/maths/people/staff/david_lowryduda/"> Dr. David Lowry-Duda </a> </p>
 	<p> <a href="https://awwalker.com/"> Dr. Alexander Walker </a></p>
 	<p> <a href="https://www.math.univ-paris13.fr/~lesesvre/"> Dr. Didier Lesesvre </a></p>
-	<p> <a href="http://www.bowdoin.edu/~ntanabe/"> Dr. Naomi Tanabe </a> </p>
       </td>
     <td width="25%">
        <img src="kule.jpg" width="300"><br>
@@ -80,7 +83,7 @@ are encouraged to collaborate in the wider area of automorphic forms and L-funct
 
 
 <div style="text-align: right;">
-<small>Last updated: 14 March 2018<br></small>
+<small>Last updated: 27 July 2018<br></small>
 </div>
 </div> <!-- End content -->
 </body></html>
