--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@ h1,h2,h3 {
       <h3>Personal</h3>
       A place I care deeply <a href="http://matematikkoyu.org/eng/" target="_blank">about.</a> <br/>
       email: erenmehmetkiral@protonmail.com
-    </td>
+	  <h3> Workshop</h3>
+		A <a href="nesinworkshop.html"> workshop </a> on automorphic functions at Nesin Mathematics Village.
+	  </td>
     <td width="50%">
        <img src="mehmetMoma.jpg" alt="Headshot of myself in MoMa" title="I got this picture in MoMa right next to an abstract painting. White square on white background." height="200" width="200">
 	</td>
@@ -62,7 +64,7 @@ h1,h2,h3 {
 			 <br>
 			My <a href ="CV_Apr_2018_ErenMehmetKiral.pdf"> CV</a>.
 			<br/>
-			My Ph.D. advisor is Jeffrey Hofstein from Brown University, and my postdoctoral mentor is 
+			My Ph.D. advisor is Jeffrey Hoffstein from Brown University, and my postdoctoral mentor is 
 			Matthew Young from Texas A&amp;M University.
 		</td>
 		<td class = poetry>
