--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@ h1,h2,h3 {
       <h3>Personal</h3>
       A place I care deeply <a href="http://matematikkoyu.org/eng/" target="_blank">about.</a> <br/>
       email: erenmehmetkiral@protonmail.com
-	  <h3> Workshop</h3>
-		A <a href="nesinworkshop.html"> workshop </a> on automorphic functions at Nesin Mathematics Village.
 	  </td>
     <td width="50%">
        <img src="mehmetMoma.jpg" alt="Headshot of myself in MoMa" title="I got this picture in MoMa right next to an abstract painting. White square on white background." height="200" width="200">
 	</td>
   </tbody>
 </table>
+	  <h3> Workshop</h3>
+		<p>A <a href="nesinworkshop.html"> workshop</a> on automorphic functions at Nesin Mathematics Village.</p>
 
 <table>
 	<tbody>
