--- a/index.html
+++ b/index.html
@@ -38,22 +38,24 @@ h1,h2,h3 {
 <table>
   <tbody>
     <td width="50%">
+      <h3> Position</h3>
+	    <p> I am currently a JSPS postdoctoral fellow, working with 
+		    <a href="http://www.ics.sophia.ac.jp/nakasuji/" target="_blank"> Maki Nakasuji</a> at Sophia University. </p>  
       <h3>Teaching</h3>
       <p>I am giving a lecture series on Public Key Cryptography at RIKEN, Wako Campus as a part of iTHEMS. My Jupyter notebook 
 	  <a href="http://nbviewer.jupyter.org/github/ekiral/cryptography/tree/master/"> lecture notes</a> <br>
       </p>
-      <h3>Personal</h3>
-      A place I care deeply <a href="http://matematikkoyu.org/eng/" target="_blank">about.</a> <br/>
-      email: erenmehmetkiral@protonmail.com
 	  </td>
     <td width="50%">
        <img src="mehmetMoma.jpg" alt="Headshot of myself in MoMa" title="I got this picture in MoMa right next to an abstract painting. White square on white background." height="200" width="200">
 	</td>
   </tbody>
 </table>
-	  <h3> Workshop</h3>
-		<p>A <a href="nesinworkshop.html"> workshop</a> on automorphic functions at Nesin Mathematics Village.</p>
-
+	
+ <h3>Personal</h3>
+     <p> A place I care deeply <a href="http://matematikkoyu.org/eng/" target="_blank">about.</a> <br/>
+	     email: erenmehmetkiral@protonmail.com </p>
+	
 <table>
 	<tbody>
 		<td width="60%">
@@ -62,7 +64,7 @@ h1,h2,h3 {
 			including half-integer weight forms, and their L-functions, 
 			and the moments of said L-functions.
 			 <br>
-			My <a href ="CV_Apr_2018_ErenMehmetKiral.pdf"> CV</a>.
+			My <a href ="CV_Jan_2019_ErenMehmetKiral.pdf"> CV</a>.
 			<br/>
 			My Ph.D. advisor is Jeffrey Hoffstein from Brown University, and my postdoctoral mentor is 
 			Matthew Young from Texas A&amp;M University.
@@ -92,7 +94,8 @@ h1,h2,h3 {
     </tr>
     <tr valign = "top">
       <td>3. </td>
-      <td> <i>Oscillatory integrals with uniformity in parameters</i> <br> joint with I. Petrow, M. Young </td>
+      <td> <i>Oscillatory integrals with uniformity in parameters</i> <br> joint with I. Petrow, M. Young 
+	</br> Accepted for publication in Journal de Th&eacute;orie des Nombres de Bordeaux</td>
       <td><a href="https://arxiv.org/abs/1710.00916"> arxiv </a> </td>
     </tr>    
 	<tr valign = "top">
@@ -148,7 +151,7 @@ International Journal of Number Theory, vol. 8, no. 3 (2012): pp.
 </table>
 <br>
 <div style="text-align: right;">
-<small>Last updated: 27 April 2018<br></small>
+<small>Last updated: 25 January 2019<br></small>
 </div>
 </div> <!-- End content -->
 
