JSPS to SPDR, updated publications, NMK link
Changed my current position to SPDR working with Bannai sensei,
Updated my list of publications
The nesin math village link was broken, so changed it.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta name="description" content="Personal Webpage of Eren Mehmet Kiral">
   <meta name="keywords" content="automorphic forms, brown university, math, math 18, brown, mehmet kiral">
   <meta name="author" content="Eren Mehmet Kiral">
-  <meta name="revised" content="Eren Mehmet Kiral, 27/July/2013">
+  <meta name="revised" content="Eren Mehmet Kiral, 9/September/2020">
 </b></font>
 
 <style type="text/css">
@@ -39,10 +39,12 @@ h1,h2,h3 {
   <tbody>
     <td width="50%">
       <h3> Position</h3>
-	    <p> I am currently a JSPS postdoctoral fellow, working with 
-		    <a href="http://www.ics.sophia.ac.jp/nakasuji/" target="_blank"> Maki Nakasuji</a> at Sophia University. </p>  
+	    <p> I am currently an SPDR postdoctoral Researcher, working in the 
+		    <a href="https://www.riken.jp/en/research/labs/aip/generic_tech/math_sci/index.html" target="_blank"> Mathematical Sciences Team</a> 
+		    of <a href="https://www.riken.jp/en/research/labs/aip/"> RIKEN AIP </a> under 
+		    <a href="http://www.math.keio.ac.jp/~bannai/en/"> Kennichi Bannai</a>. </p>  
       <h3>Teaching</h3>
-      <p>I am giving a lecture series on Public Key Cryptography at RIKEN, Wako Campus as a part of iTHEMS. My Jupyter notebook 
+      <p>I gave a lecture series on Public Key Cryptography at RIKEN, Wako Campus as a part of iTHEMS. My Jupyter notebook 
 	  <a href="http://nbviewer.jupyter.org/github/ekiral/cryptography/tree/master/"> lecture notes</a> <br>
       </p>
 	  </td>
@@ -53,7 +55,7 @@ h1,h2,h3 {
 </table>
 	
  <h3>Personal</h3>
-     <p> A place I care deeply <a href="http://matematikkoyu.org/eng/" target="_blank">about.</a> <br/>
+     <p> A place I care deeply <a href="https://nesinkoyleri.org/en/nesin-villages/" target="_blank">about.</a> <br/>
 	     email: erenmehmetkiral@protonmail.com </p>
 	
 <table>
@@ -64,10 +66,11 @@ h1,h2,h3 {
 			including half-integer weight forms, and their L-functions, 
 			and the moments of said L-functions.
 			 <br>
-			My <a href ="CV_Jan_2019_ErenMehmetKiral.pdf"> CV</a>.
+			My <a href ="CV_Mar_2020_ErenMehmetKiral.pdf"> CV</a>.
 			<br/>
 			My Ph.D. advisor is Jeffrey Hoffstein from Brown University, and my postdoctoral mentor is 
-			Matthew Young from Texas A&amp;M University.
+			Matthew Young from Texas A&amp;M University. In Japan I was a JSPS postdoctoral fellow, working with 
+		    <a href="http://www.ics.sophia.ac.jp/nakasuji/" target="_blank"> Maki Nakasuji</a> at Sophia University.
 		</td>
 		<td class = poetry>
 			<h3> A Haiku </h3>
@@ -82,76 +85,88 @@ h1,h2,h3 {
 <table>
   <tbody>
 	<tr valign = "top">
-      <td>1.</td>
-      <td> <i>Level Reciprocity in the twisted second moments of Rankin-Selberg L-functions</i> 
-	  <br> joint with N. Andersen <br> Accepted for publication in Mathematika</td>
-      <td><a href="https://arxiv.org/abs/1801.06089"> arxiv </a> </td>
-    </tr>
-    <tr valign = "top">
-      <td>2. </td>
-      <td> <i>The fifth moment of Modular L-functions</i> <br> joint with M. Young </td>
-      <td><a href="https://arxiv.org/abs/1701.07507"> arxiv </a> </td>
-    </tr>
-    <tr valign = "top">
-      <td>3. </td>
-      <td> <i>Oscillatory integrals with uniformity in parameters</i> <br> joint with I. Petrow, M. Young 
-	</br> Accepted for publication in Journal de Th&eacute;orie des Nombres de Bordeaux</td>
-      <td><a href="https://arxiv.org/abs/1710.00916"> arxiv </a> </td>
-    </tr>    
+	<td>1.</td> 
+		<td> <i> Parametrization of Kloosterman sets and SL(3)-Kloosterman sums</i>
+			<br> joint with Maki Nakasuji. </td>
+			<td> <a href="https://arxiv.org/abs/2001.01936"> arxiv </a> </td>
+	</tr>
 	<tr valign = "top">
-      <td>4. </td>
-      <td> <i>Kloosterman sums and Fourier coefficients of Eisenstein series</i> 
-	  <br> joint with M. Young <br> Accepted for publication in The Ramanujan Journal</td>
-      <td><a href="https://arxiv.org/abs/1710.00914"> arxiv </a> </td>
-    </tr>    
+		<td>2.</td> 
+		<td> <i> Additive twists and a conjecture by Mazur, Rubin and Stein</i>
+			<br> joint with Nikolaos Diamantis, Jeffrey Hoffstein and Min Lee
+			<br> Journal of Number Theory 209 (2020): 1-36. </td>
+		<td> <a href="https://arxiv.org/abs/1807.02506" target="_blank"> arxiv </a> </td>
+	</tr>
+	<tr valign = "top">	
+		<td>3.</td>
+      		<td> <i>Level Reciprocity in the twisted second moments of Rankin-Selberg L-functions</i> 
+	  	<br> joint with N. Andersen <br> Mathematika 64 (3), 770-784.</td>
+      		<td><a href="https://arxiv.org/abs/1801.06089" target="_blank"> arxiv </a> </td>
+    	</tr>
+    	<tr valign = "top">
+      		<td>4. </td>
+      		<td> <i>The fifth moment of Modular L-functions</i> <br> joint with M. Young
+	    		<br> Accepted for Publication in the Journal of the European Mathematical Society (JEMS)</td>
+      		<td><a href="https://arxiv.org/abs/1701.07507" target="_blank"> arxiv </a> </td>
+    	</tr>
+    	<tr valign = "top">
+      		<td>5. </td>
+      		<td> <i>Oscillatory integrals with uniformity in parameters</i> <br> joint with I. Petrow, M. Young 
+			</br> Journal de Th&eacute;orie des Nombres de Bordeaux 31, no. 1 (2019): 145-159.</td>
+	        <td><a href="https://arxiv.org/abs/1710.00916" target="_blank"> arxiv </a> </td>
+    	</tr>    
+	<tr valign = "top">
+      		<td>6. </td>
+      		<td> <i>Kloosterman sums and Fourier coefficients of Eisenstein series</i> 
+	  		<br> joint with M. Young 
+	  		<br> The Ramanujan Journal, 49(2), 391-409.</td>
+      		<td><a href="https://arxiv.org/abs/1710.00914" target="_blank"> arxiv </a> </td>
+    	</tr>    
 	<tr valign="top">
-      <td>5. </td>
-      <td> <i>The Voronoi formula and double Dirichlet series</i><br> joint with F. Zhou <br>
-Algebra &amp; Number Theory vol. 10, No 10 (2016), pp. 2267-2286.
- <br> <a href="uncut.pdf"> long version </a> </td>
-      <td><a href="http://arxiv.org/abs/1508.01985">arxiv </a> </td>
-    </tr>
-    <tr valign="top">
-      <td>6. </td>
-      <td><i>Opposite sign Kloosterman sum zeta function</i><br>
-Mathematika, vol 62, Issue 02, (2016), pp. 406 - 429
-      </td>
-      <td><a href="http://arxiv.org/abs/1504.01860">arxiv </a> </td>
-    </tr>
-    <tr valign="top">
-      <td>7. </td>
-      <td><i>Bounds on Sup-norms of Half Integral Weight Modular Forms</i><br>
-Acta Arithmetica, vol. 165, no. 4 (2014): pp. 385-399<br>
-      </td>
-      <td><a href="http://arxiv.org/abs/1309.7218">arxiv</a> </td>
-    </tr>
-    <tr valign="top">
-      <td>8.</td>
-      <td><i>Subconvexity for Half Integral Weight L-functions.</i> <br>
-Mathematische Zeitschrift, vol. 281, Issue 3 (2015): pp. 689-722</td>
-      <td><a href="http://arxiv.org/abs/1307.0112">arxiv </a></td>
-    </tr>
-    <tr valign="top">
-      <td>9.</td>
-      <td><i>Counting Square Discriminants </i> <br>
-joint with T. A. Hulse, C. I. Kuan, L. Lim, <br>
-         Journal of Number Theory, vol. 162, (2016): 255-274.</td>
-      <td><a href="http://arxiv.org/abs/1307.6606">arxiv</a> </td>
-    </tr>
-    <tr valign="top">
-      <td>10.</td>
-      <td><i>The Sign of Fourier Coefficients of Half-Integral Cusp
-Forms </i> <br>
-joint with T. A. Hulse, C. I. Kuan, L. Lim, <br>
-International Journal of Number Theory, vol. 8, no. 3 (2012): pp.
-749-762</td>
-      <td><a href="http://arxiv.org/abs/1106.3606" target="_blank">arxiv</a></td>
-    </tr>
+      		<td>7. </td>
+      		<td> <i>The Voronoi formula and double Dirichlet series</i>
+      			<br> joint with F. Zhou 
+      			<br> Algebra &amp; Number Theory vol. 10, No 10 (2016), pp. 2267-2286.
+      			<br> <a href="uncut.pdf" target="_blank"> long version </a> </td>
+      		<td><a href="http://arxiv.org/abs/1508.01985" target="_blank">arxiv </a> </td>
+    	</tr>
+    	<tr valign="top">
+      		<td>8. </td>
+      		<td><i>Opposite sign Kloosterman sum zeta function</i>
+			<br>Mathematika, vol 62, Issue 02, (2016), pp. 406 - 429</td>
+      		<td><a href="http://arxiv.org/abs/1504.01860" target="_blank">arxiv </a> </td>
+    	</tr>
+    	<tr valign="top">
+      		<td>9. </td>
+      		<td><i>Bounds on Sup-norms of Half Integral Weight Modular Forms</i>
+			<br> Acta Arithmetica, vol. 165, no. 4 (2014): pp. 385-399 </td>
+      		<td><a href="http://arxiv.org/abs/1309.7218" target="_blank">arxiv</a> </td>
+    	</tr>
+    	<tr valign="top">
+      		<td>10.</td>
+      		<td><i>Subconvexity for Half Integral Weight L-functions.</i> 
+			<br> Mathematische Zeitschrift, vol. 281, Issue 3 (2015): pp. 689-722</td>
+      		<td><a href="http://arxiv.org/abs/1307.0112" target="_blank">arxiv </a></td>
+    	</tr>
+    	<tr valign="top">
+      		<td>9.</td>
+      		<td><i>Counting Square Discriminants </i> 
+			<br>joint with T. A. Hulse, C. I. Kuan, L. Lim, 
+			<br> Journal of Number Theory, vol. 162, (2016): 255-274.</td>
+      		<td><a href="http://arxiv.org/abs/1307.6606" target="_blank">arxiv</a> </td>
+    	</tr>
+    	<tr valign="top">
+      		<td>10.</td>
+      		<td><i>The Sign of Fourier Coefficients of Half-Integral Cusp Forms </i> 
+      			<br> joint with T. A. Hulse, C. I. Kuan, L. Lim, 
+      			<br>International Journal of Number Theory, vol. 8, no. 3 (2012): pp. 749-762</td>
+      		<td><a href="http://arxiv.org/abs/1106.3606" target="_blank">arxiv</a></td>
+    	</tr>
   </tbody>
 </table>
 <br>
 <div style="text-align: right;">
-<small>Last updated: 25 January 2019<br></small>
+<small>Last updated: 9 September 2020<br></small>
 </div>
 </div> <!-- End content -->
 
