--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@ h1,h2,h3 {
     <td width="50%">
       <h3> Position</h3>
 	    <p> I am currently an SPDR postdoctoral Researcher, working in the 
-		    <a href="https://www.riken.jp/en/research/labs/aip/generic_tech/math_sci/index.html" target="_blank"> Mathematical Sciences Team</a> 
-		    of <a href="https://www.riken.jp/en/research/labs/aip/"> RIKEN AIP </a> under 
-		    <a href="http://www.math.keio.ac.jp/~bannai/en/"> Kennichi Bannai</a>. </p>  
+		    <a href="https://www.riken.jp/en/research/labs/aip/generic_tech/math_sci/index.html" target="_blank">Mathematical Sciences Team</a> 
+		    of <a href="https://www.riken.jp/en/research/labs/aip/">RIKEN AIP</a> under 
+		    <a href="http://www.math.keio.ac.jp/~bannai/en/"> Kenichi Bannai</a>. </p>  
       <h3>Teaching</h3>
       <p>I gave a lecture series on Public Key Cryptography at RIKEN, Wako Campus as a part of iTHEMS. My Jupyter notebook 
 	  <a href="http://nbviewer.jupyter.org/github/ekiral/cryptography/tree/master/"> lecture notes</a> <br>
@@ -70,7 +70,7 @@ h1,h2,h3 {
 			<br/>
 			My Ph.D. advisor is Jeffrey Hoffstein from Brown University, and my postdoctoral mentor is 
 			Matthew Young from Texas A&amp;M University. In Japan I was a JSPS postdoctoral fellow, working with 
-		    <a href="http://www.ics.sophia.ac.jp/nakasuji/" target="_blank"> Maki Nakasuji</a> at Sophia University.
+		    <a href="http://www.ics.sophia.ac.jp/nakasuji/" target="_blank">Maki Nakasuji</a> at Sophia University.
 		</td>
 		<td class = poetry>
 			<h3> A Haiku </h3>
@@ -88,39 +88,39 @@ h1,h2,h3 {
 	<td>1.</td> 
 		<td> <i> Parametrization of Kloosterman sets and SL(3)-Kloosterman sums</i>
 			<br> joint with Maki Nakasuji. </td>
-			<td> <a href="https://arxiv.org/abs/2001.01936"> arxiv </a> </td>
+			<td> <a href="https://arxiv.org/abs/2001.01936">arxiv</a> </td>
 	</tr>
 	<tr valign = "top">
 		<td>2.</td> 
 		<td> <i> Additive twists and a conjecture by Mazur, Rubin and Stein</i>
 			<br> joint with Nikolaos Diamantis, Jeffrey Hoffstein and Min Lee
 			<br> Journal of Number Theory 209 (2020): 1-36. </td>
-		<td> <a href="https://arxiv.org/abs/1807.02506" target="_blank"> arxiv </a> </td>
+		<td> <a href="https://arxiv.org/abs/1807.02506" target="_blank">arxiv</a> </td>
 	</tr>
 	<tr valign = "top">	
 		<td>3.</td>
       		<td> <i>Level Reciprocity in the twisted second moments of Rankin-Selberg L-functions</i> 
 	  	<br> joint with N. Andersen <br> Mathematika 64 (3), 770-784.</td>
-      		<td><a href="https://arxiv.org/abs/1801.06089" target="_blank"> arxiv </a> </td>
+      		<td><a href="https://arxiv.org/abs/1801.06089" target="_blank">arxiv</a> </td>
     	</tr>
     	<tr valign = "top">
       		<td>4. </td>
       		<td> <i>The fifth moment of Modular L-functions</i> <br> joint with M. Young
 	    		<br> Accepted for Publication in the Journal of the European Mathematical Society (JEMS)</td>
-      		<td><a href="https://arxiv.org/abs/1701.07507" target="_blank"> arxiv </a> </td>
+      		<td><a href="https://arxiv.org/abs/1701.07507" target="_blank">arxiv</a> </td>
     	</tr>
     	<tr valign = "top">
       		<td>5. </td>
       		<td> <i>Oscillatory integrals with uniformity in parameters</i> <br> joint with I. Petrow, M. Young 
 			</br> Journal de Th&eacute;orie des Nombres de Bordeaux 31, no. 1 (2019): 145-159.</td>
-	        <td><a href="https://arxiv.org/abs/1710.00916" target="_blank"> arxiv </a> </td>
+	        <td><a href="https://arxiv.org/abs/1710.00916" target="_blank">arxiv</a> </td>
     	</tr>    
 	<tr valign = "top">
       		<td>6. </td>
       		<td> <i>Kloosterman sums and Fourier coefficients of Eisenstein series</i> 
 	  		<br> joint with M. Young 
 	  		<br> The Ramanujan Journal, 49(2), 391-409.</td>
-      		<td><a href="https://arxiv.org/abs/1710.00914" target="_blank"> arxiv </a> </td>
+      		<td><a href="https://arxiv.org/abs/1710.00914" target="_blank">arxiv</a> </td>
     	</tr>    
 	<tr valign="top">
       		<td>7. </td>
@@ -128,13 +128,13 @@ h1,h2,h3 {
       			<br> joint with F. Zhou 
       			<br> Algebra &amp; Number Theory vol. 10, No 10 (2016), pp. 2267-2286.
       			<br> <a href="uncut.pdf" target="_blank"> long version </a> </td>
-      		<td><a href="http://arxiv.org/abs/1508.01985" target="_blank">arxiv </a> </td>
+      		<td><a href="http://arxiv.org/abs/1508.01985" target="_blank">arxiv</a> </td>
     	</tr>
     	<tr valign="top">
       		<td>8. </td>
       		<td><i>Opposite sign Kloosterman sum zeta function</i>
 			<br>Mathematika, vol 62, Issue 02, (2016), pp. 406 - 429</td>
-      		<td><a href="http://arxiv.org/abs/1504.01860" target="_blank">arxiv </a> </td>
+      		<td><a href="http://arxiv.org/abs/1504.01860" target="_blank">arxiv</a> </td>
     	</tr>
     	<tr valign="top">
       		<td>9. </td>
@@ -146,7 +146,7 @@ h1,h2,h3 {
       		<td>10.</td>
       		<td><i>Subconvexity for Half Integral Weight L-functions.</i> 
 			<br> Mathematische Zeitschrift, vol. 281, Issue 3 (2015): pp. 689-722</td>
-      		<td><a href="http://arxiv.org/abs/1307.0112" target="_blank">arxiv </a></td>
+      		<td><a href="http://arxiv.org/abs/1307.0112" target="_blank">arxiv</a></td>
     	</tr>
     	<tr valign="top">
       		<td>9.</td>
