updated Keio Information

--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html><head>
   <font><b><title>E. Mehmet K&#305;ral's Homepage</title>
+  <meta charset="utf-8" />
   <meta name="description" content="Personal Webpage of Eren Mehmet Kiral">
-  <meta name="keywords" content="automorphic forms, brown university, math, math 18, brown, mehmet kiral">
+  <meta name="keywords" content="machine learning, automorphic forms, brown university, math, mehmet kiral">
   <meta name="author" content="Eren Mehmet Kiral">
-  <meta name="revised" content="Eren Mehmet Kiral, 9/September/2020">
+  <meta name="revised" content="Eren Mehmet Kiral, 21/November/2023">
 </b></font>
 
 <style type="text/css">
@@ -39,9 +40,9 @@ h1,h2,h3 {
   <tbody>
     <td width="50%">
       <h3> Position</h3>
-	    <p> I am currently an SPDR postdoctoral Researcher, working in the 
+	    <p> I am currently a Project Associate Professor (特任講師), working at Keio University with the 
 		    <a href="https://www.riken.jp/en/research/labs/aip/generic_tech/math_sci/index.html" target="_blank">Mathematical Sciences Team</a> 
-		    of <a href="https://www.riken.jp/en/research/labs/aip/">RIKEN AIP</a> under 
+		    of <a href="https://www.riken.jp/en/research/labs/aip/">RIKEN AIP</a> led by 
 		    <a href="http://www.math.keio.ac.jp/~bannai/en/"> Kenichi Bannai</a>. </p>  
       <h3>Teaching</h3>
       <p>I gave a lecture series on Public Key Cryptography at RIKEN, Wako Campus as a part of iTHEMS. My Jupyter notebook 
@@ -60,17 +61,16 @@ h1,h2,h3 {
 	
 <table>
 	<tbody>
-		<td width="60%">
-			<h3>Research</h3>
-			I work on modular/automorphic forms
-			including half-integer weight forms, and their L-functions, 
-			and the moments of said L-functions. Also I work on  mathematical aspects of artificial intellilgence.
-			 <br>
-			My <a href ="CV_Mar_2020_ErenMehmetKiral.pdf"> CV</a>.
+		<td width="70%">
+			<h3>Research</h3>			I like thinking about probability, entropy, thermodynamics and group actions in the context of machine learning. 
+			Also on modular forms (including half-integer weight) and their L-functions.
+			My <a href ="CV_Nov_2023_ErenMehmetKiral.pdf"> CV</a>.
 			<br/>
 			My Ph.D. advisor is Jeffrey Hoffstein from Brown University, and my postdoctoral mentor is 
 			Matthew Young from Texas A&amp;M University. In Japan I was a JSPS postdoctoral fellow, working with 
-		    <a href="http://www.ics.sophia.ac.jp/nakasuji/" target="_blank">Maki Nakasuji</a> at Sophia University.
+		    <a href="http://www.ics.sophia.ac.jp/nakasuji/" target="_blank">Maki Nakasuji</a> at Sophia University. I also
+			was a <a href="https://www.riken.jp/en/careers/programs/spdr/">SPDR</a> 
+			fellow in <a href="https://www.riken.jp/en/research/labs/aip/">RIKEN AIP</a> where I made a switch to Machine Learning research.
 		</td>
 		<td class = poetry>
 			<h3> A Haiku </h3>
@@ -83,53 +83,62 @@ h1,h2,h3 {
 <h3>List of Publications</h3>
 
 <table>
-  <tbody>
+  <body>
 	<tr valign = "top">
 		<td>1.</td> 
-		<td> <i> Subconvexity for twisted GL(3) L-functions</i>
-			<br> joint with C. I. Kuan, D. Lesesvre. </td>
-			<td> <a href="https://arxiv.org/abs/2104.04719">arxiv</a> </td>
+		<td> <i> The Lie-Group Bayesian Learning Rule</i>
+			<br> joint with T. Mo&#x308;llenhoff, E. Khan.
+			<br> AISTATS 2023 206:3331-3352 </td>
+			<td> <a href="https://proceedings.mlr.press/v206/kiral23a.html">PLMR</a> </td>
 	</tr>
 	<tr valign = "top">
 		<td>2.</td> 
-		<td> <i> Parametrization of Kloosterman sets and SL(3)-Kloosterman sums</i>
-			<br> joint with M. Nakasuji. </td>
-			<td> <a href="https://arxiv.org/abs/2001.01936">arxiv</a> </td>
+		<td> <i> Subconvexity for twisted GL(3) L-functions</i>
+			<br> joint with C. I. Kuan, D. Lesesvre. 
+			<br> Acta Arithmetica 202 (2022), 281-302. </td>
+			<td> <a href="https://arxiv.org/abs/2104.04719">arxiv</a> </td>
 	</tr>
 	<tr valign = "top">
 		<td>3.</td> 
+		<td> <i> Parametrization of Kloosterman sets and SL(3)-Kloosterman sums</i>
+			<br> joint with M. Nakasuji.
+			<br> Advances in Mathematics 403 (2022), 108392. </td>
+			<td> <a href="https://arxiv.org/abs/2001.01936">arxiv</a> </td>
+	</tr>
+	<tr malign = "top">
+		<td>4.</td> 
 		<td> <i> Additive twists and a conjecture by Mazur, Rubin and Stein</i>
 		<br> joint with N. Diamantis, J. Hoffstein and M. Lee
 		<br> Journal of Number Theory 209 (2020): 1-36. </td>
 		<td> <a href="https://arxiv.org/abs/1807.02506" target="_blank">arxiv</a> </td>
 	</tr>
 	<tr valign = "top">	
-		<td>4.</td>
+		<td>5.</td>
       		<td> <i>Level Reciprocity in the twisted second moments of Rankin-Selberg L-functions</i> 
 	  	<br> joint with N. Andersen <br> Mathematika 64 (3), 770-784.</td>
       		<td><a href="https://arxiv.org/abs/1801.06089" target="_blank">arxiv</a> </td>
     	</tr>
     	<tr valign = "top">
-      		<td>5. </td>
+      		<td>6. </td>
       		<td> <i>The fifth moment of Modular L-functions</i> <br> joint with M. Young
 	    		<br> Accepted for Publication in the Journal of the European Mathematical Society (JEMS)</td>
       		<td><a href="https://arxiv.org/abs/1701.07507" target="_blank">arxiv</a> </td>
     	</tr>
     	<tr valign = "top">
-      		<td>6. </td>
+      		<td>7. </td>
       		<td> <i>Oscillatory integrals with uniformity in parameters</i> <br> joint with I. Petrow, M. Young 
 			</br> Journal de Th&eacute;orie des Nombres de Bordeaux 31, no. 1 (2019): 145-159.</td>
 	        <td><a href="https://arxiv.org/abs/1710.00916" target="_blank">arxiv</a> </td>
     	</tr>    
 	<tr valign = "top">
-      		<td>7. </td>
+      		<td>8. </td>
       		<td> <i>Kloosterman sums and Fourier coefficients of Eisenstein series</i> 
 	  		<br> joint with M. Young 
 	  		<br> The Ramanujan Journal, 49(2), 391-409.</td>
       		<td><a href="https://arxiv.org/abs/1710.00914" target="_blank">arxiv</a> </td>
     	</tr>    
 	<tr valign="top">
-      		<td>8. </td>
+      		<td>9. </td>
       		<td> <i>The Voronoi formula and double Dirichlet series</i>
       			<br> joint with F. Zhou 
       			<br> Algebra &amp; Number Theory vol. 10, No 10 (2016), pp. 2267-2286.
@@ -137,32 +146,32 @@ h1,h2,h3 {
       		<td><a href="http://arxiv.org/abs/1508.01985" target="_blank">arxiv</a> </td>
     	</tr>
     	<tr valign="top">
-      		<td>9. </td>
+      		<td>10. </td>
       		<td><i>Opposite sign Kloosterman sum zeta function</i>
 			<br>Mathematika, vol 62, Issue 02, (2016), pp. 406 - 429</td>
       		<td><a href="http://arxiv.org/abs/1504.01860" target="_blank">arxiv</a> </td>
     	</tr>
     	<tr valign="top">
-      		<td>10. </td>
+      		<td>11. </td>
       		<td><i>Bounds on Sup-norms of Half Integral Weight Modular Forms</i>
 			<br> Acta Arithmetica, vol. 165, no. 4 (2014): pp. 385-399 </td>
       		<td><a href="http://arxiv.org/abs/1309.7218" target="_blank">arxiv</a> </td>
     	</tr>
     	<tr valign="top">
-      		<td>11.</td>
+      		<td>12.</td>
       		<td><i>Subconvexity for Half Integral Weight L-functions.</i> 
 			<br> Mathematische Zeitschrift, vol. 281, Issue 3 (2015): pp. 689-722</td>
       		<td><a href="http://arxiv.org/abs/1307.0112" target="_blank">arxiv</a></td>
     	</tr>
     	<tr valign="top">
-      		<td>12.</td>
+      		<td>13.</td>
       		<td><i>Counting Square Discriminants </i> 
 			<br>joint with T. A. Hulse, C. I. Kuan, L. Lim, 
 			<br> Journal of Number Theory, vol. 162, (2016): 255-274.</td>
       		<td><a href="http://arxiv.org/abs/1307.6606" target="_blank">arxiv</a> </td>
     	</tr>
     	<tr valign="top">
-      		<td>13.</td>
+      		<td>14.</td>
       		<td><i>The Sign of Fourier Coefficients of Half-Integral Cusp Forms </i> 
       			<br> joint with T. A. Hulse, C. I. Kuan, L. Lim, 
       			<br>International Journal of Number Theory, vol. 8, no. 3 (2012): pp. 749-762</td>
@@ -172,7 +181,7 @@ h1,h2,h3 {
 </table>
 <br>
 <div style="text-align: right;">
-<small>Last updated: 29 April 2021<br></small>
+<small>Last updated: 27 November 2023<br></small>
 </div>
 </div> <!-- End content -->
 
