--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ h1,h2,h3 {
 		<td> <i> The Lie-Group Bayesian Learning Rule</i>
 			<br> joint with T. Mo&#x308;llenhoff, E. Khan.
 			<br> AISTATS 2023 206:3331-3352 </td>
-			<td> <a href="https://proceedings.mlr.press/v206/kiral23a.html">PLMR</a> </td>
+			<td> <a href="https://proceedings.mlr.press/v206/kiral23a.html">PMLR</a> </td>
 	</tr>
 	<tr valign = "top">
 		<td>2.</td> 
