Corrected translation of tokunin koushi

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="description" content="Personal Webpage of Eren Mehmet Kiral">
   <meta name="keywords" content="machine learning, automorphic forms, brown university, math, mehmet kiral">
   <meta name="author" content="Eren Mehmet Kiral">
-  <meta name="revised" content="Eren Mehmet Kiral, 21/November/2023">
+  <meta name="revised" content="Eren Mehmet Kiral, 21/January/2024">
 </b></font>
 
 <style type="text/css">
@@ -40,7 +40,7 @@ h1,h2,h3 {
   <tbody>
     <td width="50%">
       <h3> Position</h3>
-	    <p> I am currently a Project Associate Professor (特任講師), working at Keio University with the 
+	    <p> I am currently a Project Assistant Professor (特任講師), working at Keio University with the 
 		    <a href="https://www.riken.jp/en/research/labs/aip/generic_tech/math_sci/index.html" target="_blank">Mathematical Sciences Team</a> 
 		    of <a href="https://www.riken.jp/en/research/labs/aip/">RIKEN AIP</a> led by 
 		    <a href="http://www.math.keio.ac.jp/~bannai/en/"> Kenichi Bannai</a>. </p>  
@@ -181,7 +181,7 @@ h1,h2,h3 {
 </table>
 <br>
 <div style="text-align: right;">
-<small>Last updated: 27 November 2023<br></small>
+<small>Last updated: 21 January 2024<br></small>
 </div>
 </div> <!-- End content -->
 
